--- a/style.css
+++ b/style.css
@@ -170,3 +170,39 @@ td:first-child {
     background-size: 40%;
     background-repeat: no-repeat;
 }
+
+@media (max-height: 800px) {
+
+    body {
+        font-size: 1rem;
+    }
+   
+    footer > h2,
+    footer > div {
+    /* To layout the chidlren: <h2> & <div>, make it to center vertically within footer */
+        margin-bottom: 10px;
+        margin-top: 5px;
+    }
+
+    img {
+        /* Reset the img size so they look relatively balance to footer box */
+        height: 20px;
+        width: 20px;
+    }
+
+    button {
+        font-size: 0.5em;
+        margin: 30px;
+    }
+
+    table {
+        /* It's not magic number, just to make the table relatively balance to the whole page */
+        /* Otherwise, 1rem is too small & 1.5rem is too big */
+        font-size: 1.2rem;
+    }
+    
+    th{
+        padding: 5px;
+    }
+
+}
