--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ td:first-child {
     background-repeat: no-repeat;
 }
 
-@media (max-height: 800px) {
+@media (max-width: 500px) {
 
     body {
         font-size: 1rem;
@@ -191,7 +191,7 @@ td:first-child {
     }
 
     button {
-        font-size: 0.5em;
+        font-size: 1em;
         margin: 30px;
     }
 
